--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,9 @@
     <string name="ip_address">IP address</string>
     <string name="ip_port">Port</string>
     <string name="action_ok">OK</string>
+    <string name="preview">Предпросмотр</string>
+    <string name="use_jpeg">JPEG</string>
+    <string name="use_h264">H.264</string>
+    <string name="close_back">CLOSE</string>
+    <string name="close_front">CLOSE</string>
 </resources>
