--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="frame_rate">Частота</string>
     <string name="frame_rate_value">30</string>
     <string name="bitrate">Bitrate</string>
+    <string name="sizesfrontcamera">Разрешения передней камеры</string>
+    <string name="sizesbackcamera">Разрешения задней камеры</string>
     <string-array name="frame_rates">
         <item>15</item>
         <item>25</item>
