--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,8 @@
     <string name="bitrate">Bitrate</string>
     <string name="sizesfrontcamera">Разрешения передней камеры</string>
     <string name="sizesbackcamera">Разрешения задней камеры</string>
+    <string name="back_cam">BACK</string>
+    <string name="front_cam">FRONT</string>
     <string-array name="frame_rates">
         <item>15</item>
         <item>25</item>
